--- a/js/gp/graph.html
+++ b/js/gp/graph.html
@@ -16,7 +16,7 @@
     data: {
       labels: [1,2,3,4],
       datasets: [{
-        label: 'Dados Brutos',
+        label: 'Preço do ativo',
         data: [],//start empty
         fill: false,
         backgroundColor: [
